--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -5,22 +5,21 @@
   </ion-toolbar>
 </ion-header>
  
-<ion-content padding>
- 
-  <ion-grid>
-    <ion-row>
-      <ion-col text-center>
-        Welcome to Dashboard!
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col text-center>
-        Your Registered EmailID : {{userEmail}}
-      </ion-col>
-    </ion-row>
-  </ion-grid>  
-  
-  
+<ion-content *ngIf="items" class="list-mini-content" padding>
+  <div *ngIf="items.length > 0" class="list-mini">
+    <ion-list>
+      <ion-item *ngFor="let item of items" [routerLink]="['/details', item.payload.doc.id]">
+        <ion-thumbnail slot="start">
+          <img [src]="item.payload.doc.data().image">
+        </ion-thumbnail>
+        <ion-label>{{item.payload.doc.data().title}}</ion-label>
+        <ion-button fill="clear" slot="end">Details</ion-button>
+      </ion-item>
+    </ion-list>
+  </div>
+  <div *ngIf="items.length == 0" class="empty-list">
+    Please create your first task.
+  </div>
 </ion-content>
 <ion-footer (click)="logout()">
   <ion-toolbar color="secondary">
