--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,18 +1,17 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-title>Dashboard</ion-title>
+    <ion-title>Profile</ion-title>
+    <ion-button type ="round" slot="end" (click)="logout()">
+      <ion-icon name="exit">
+      </ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
  
-<ion-content padding>
+<!-- <ion-content padding>
  
-  <ion-grid>
-    <ion-row>
-      <ion-col text-center>
-        Welcome to Dashboard!
-      </ion-col>
-    </ion-row>
+ <ion-grid>
     <ion-row>
       <ion-col text-center>
         Your Registered EmailID : {{userEmail}}
@@ -21,9 +20,10 @@
   </ion-grid>  
   
   
-</ion-content>
-<ion-content *ngIf="items" class="list-mini-content" padding>
-  <div *ngIf="items.length > 0" class="list-mini">
+</ion-content>  -->
+<ion-content >
+  <div *ngIf="items">
+  <!-- <div *ngIf="items.length > 0" class="list-mini">
     <ion-list>
       <ion-item *ngFor="let item of items" [routerLink]="['/tabs/details/', item.payload.doc.id]">
         <ion-thumbnail slot="start">
@@ -35,11 +35,13 @@
     </ion-list>
   </div>
   <div *ngIf="items.length == 0" class="empty-list">
-    Please create your first task.
-  </div>
+    Show your work in progress :) 
+  </div> -->
+  <ion-card *ngFor ="let item of items" [routerLink]="['/tabs/details/', item.payload.doc.id]">
+    <img [src]="item.payload.doc.data().image">
+  </ion-card>
+</div>
 </ion-content>
-<ion-footer (click)="logout()">
-  <ion-toolbar color="secondary">
-    <ion-title>Log out</ion-title>
-  </ion-toolbar>
+<ion-footer >
+  
 </ion-footer>
