--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -21,8 +21,10 @@
   
   
 </ion-content>  -->
-<ion-content >
-  <div *ngIf="items">
+<ion-content>
+  <ion-grid>
+  <ion-row>
+  <ion-col size="11" *ngIf="items">
   <!-- <div *ngIf="items.length > 0" class="list-mini">
     <ion-list>
       <ion-item *ngFor="let item of items" [routerLink]="['/tabs/details/', item.payload.doc.id]">
@@ -40,7 +42,9 @@
   <ion-card *ngFor ="let item of items" [routerLink]="['/tabs/details/', item.payload.doc.id]">
     <img [src]="item.payload.doc.data().image">
   </ion-card>
-</div>
+  </ion-col>
+</ion-row>
+</ion-grid>
 </ion-content>
 <ion-footer >
   
