--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,10 +8,10 @@
 
 <ion-content>
   
-    <img [src]="currentImage" *ngIf="currentImage">
+    <img [src]="result" *ngIf="result">
 
     <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-        <ion-fab-button (click)="takePicture()">
+        <ion-fab-button (click)="openImagePicker()">
           <ion-icon name="camera"></ion-icon>
         </ion-fab-button>
       </ion-fab>
