--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   
     <img [src]="result" *ngIf="result">
-
+<p>Open image picker </p>
     <ion-fab vertical="bottom" horizontal="center" slot="fixed">
         <ion-fab-button (click)="openImagePicker()">
           <ion-icon name="camera"></ion-icon>
