--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,5 @@
-.welcome-card ion-img {
-  max-height: 35vh;
-  overflow: hidden;
-}
+
+    section {
+      margin-top: 1em;
+      margin-bottom: 2.5em;
+    }
