--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,13 +7,13 @@
 </ion-header>
 
 <ion-content>
-  
+  <p>this should test </p>
   
     
      <div>
         <ion-row no-padding>
           <ion-col size="6" offset="3">
-            <img [src]="image" alt="" *ngIf="!image" />
+            <img [src]="image" alt="" *ngIf="image" />
           </ion-col>
         </ion-row>
       <!--   <ion-row no-padding>
