--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,13 +7,13 @@
 </ion-header>
 
 <ion-content>
-  <p>this should test </p>
+ 
   
     
      <div>
         <ion-row no-padding>
           <ion-col size="6" offset="3">
-            <img [src]="image" alt="" *ngIf="image" />
+            <img [src]="image" alt=""  />
           </ion-col>
         </ion-row>
       <!--   <ion-row no-padding>
@@ -25,14 +25,15 @@
           </ion-col>
         </ion-row> -->
       </div>
-      <section>
-        <ion-button *ngIf="!image" expand="block" color="light" (click)="takePicture()"><ion-icon name="camera" style="margin-right: 10px"></ion-icon>Camera
-          </ion-button>
-      </section>
-      <section>
-        <ion-button *ngIf="!image" expand="block" color="medium" (click)="openImagePicker()"><ion-icon name="folder-open" style="margin-right: 10px"></ion-icon>Gallery</ion-button>
-      </section>
-      <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)" *ngIf="image" >
+      <ion-row>
+        <ion-col>
+      <ion-button size="large" color="light" (click)="openImagePicker()" offset="2px"><ion-icon name="folder-open" style="margin-right: 10px"></ion-icon>Gallery</ion-button>
+        </ion-col>
+        <ion-col>
+      <ion-button size="large" color="medium" (click)="takePicture()"><ion-icon name="camera" style="margin-right: 10px"></ion-icon>Camera</ion-button>
+    </ion-col>
+    </ion-row>
+      <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)" >
         <ion-item>
           <ion-label position="floating" color="primary">Title</ion-label>
           <ion-input type="text" formControlName="title"></ion-input>
@@ -41,7 +42,7 @@
           <ion-label position="floating" color="primary">Description</ion-label>
           <ion-input type="text" formControlName="description"></ion-input>
         </ion-item>
-        <ion-button class="submit-btn" expand="block" type="submit" [disabled]="!validations_form.valid">Create</ion-button>
+        <ion-button class="submit-btn" expand="block" type="submit" color="medium" [disabled]="!validations_form.valid">Create</ion-button>
       </form> 
 
 </ion-content>
