--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -56,11 +56,14 @@
   </div> -->
   <ion-card *ngFor ="let item of items" [routerLink]="['/tabs/details/', item.payload.doc.id]">
     <img [src]="item.payload.doc.data().image">
+    <ion-card-title>{{item.payload.doc.data().title}}</ion-card-title>
   </ion-card>
   </ion-col>
 </ion-row>
 </ion-grid>
 </ion-slide>
+
+
 <ion-slide>
     <ion-grid>
         <ion-row>
