tab 1 html changed

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,7 +8,7 @@
 
 <ion-content>
  
-  <p>category working??? image test</p>
+  <p>category working??? image test testing if everything works</p>
     
      <div>
         <ion-row no-padding>
