--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -65,29 +65,18 @@
 
 
 <ion-slide>
-    <ion-grid>
-        <ion-row>
-        <ion-col size="11" *ngIf="items">
-        <!-- <div *ngIf="items.length > 0" class="list-mini">
-          <ion-list>
-            <ion-item *ngFor="let item of items" [routerLink]="['/tabs/details/', item.payload.doc.id]">
-              <ion-thumbnail slot="start">
-                <img [src]="item.payload.doc.data().image">
-              </ion-thumbnail>
-              <ion-label>{{item.payload.doc.data().title}}</ion-label>
-              <ion-button fill="clear" slot="end">Details</ion-button>
-            </ion-item>
-          </ion-list>
-        </div>
-        <div *ngIf="items.length == 0" class="empty-list">
-          Show your work in progress :) 
-        </div> -->
-        <ion-card *ngFor ="let item of items" [routerLink]="['/tabs/details/', item.payload.doc.id]">
-          <img [src]="item.payload.doc.data().image">
-        </ion-card>
-        </ion-col>
-      </ion-row>
-      </ion-grid>
+    <ion-list>
+        <ion-list-header>
+          <ion-label>Your next events</ion-label>
+        </ion-list-header>
+        <ion-item tappable *ngFor="let event of eventList" routerLink="/event-detail/{{ event.id }}">
+          <ion-label>
+            <h2>{{event?.name}}</h2>
+            <p>Ticket: <strong>${{event?.price}}</strong></p>
+            <p>Date: <strong>{{event?.date}}</strong></p>
+          </ion-label>
+        </ion-item>
+      </ion-list>
 </ion-slide>
 </ion-slides>
 </ion-content>
