--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,7 +1,7 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-title>Profile refresh</ion-title>
+    <ion-title>Profile refresh resolver</ion-title>
     <ion-button type ="round" slot="end" (click)="logout()">
       <ion-icon name="exit">
       </ion-icon>
