--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Add Media
+      Add Media segment change test 2
     </ion-title>
   </ion-toolbar>
 </ion-header>
