--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,5 +6,17 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-</ion-content>
+<!--  <ion-content padding>
+  <p>This page works</p>
+	<div *ngIf="posts">
+    <ion-card *ngFor ="let post of posts">
+      <ion-img ></ion-img>
+      <ion-card-content>
+        <p>{{ post.image }}</p>
+      </ion-card-content>
+      <ion-item (click)="toggleHeart()">
+        <ion-icon [name]="heartType"></ion-icon>
+      </ion-item>
+    </ion-card>
+     </div>  
+</ion-content>  -->
