--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -5,8 +5,8 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-<!--  <ion-content padding>
+<!-- 
+  <ion-content padding>
   <p>This page works</p>
 	<div *ngIf="posts">
     <ion-card *ngFor ="let post of posts">
@@ -18,5 +18,5 @@
         <ion-icon [name]="heartType"></ion-icon>
       </ion-item>
     </ion-card>
-     </div>  
-</ion-content>  -->
+     </div>   
+</ion-content> -->
