--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -5,18 +5,18 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<!-- 
+
   <ion-content padding>
   <p>This page works</p>
 	<div *ngIf="posts">
     <ion-card *ngFor ="let post of posts">
-      <ion-img ></ion-img>
+      <img [src]="post.image">
       <ion-card-content>
-        <p>{{ post.image }}</p>
+        <p>{{ post.title}}</p>
       </ion-card-content>
       <ion-item (click)="toggleHeart()">
         <ion-icon [name]="heartType"></ion-icon>
       </ion-item>
     </ion-card>
      </div>   
-</ion-content> -->
+</ion-content> 
