--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/tabs/tab4"></ion-back-button>
     </ion-buttons>
@@ -10,8 +10,8 @@
 <ion-content padding>
   <div>
     <ion-row>
-      <ion-col size="6" offset="3">
-        <img [src]="image" alt="this is the image"/>
+      <ion-col size="12" offset="0">
+        <img id ="image" [src]="image" alt="this is the image"/>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -22,7 +22,7 @@
   </div>
   <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)">
     <ion-item>
-      <ion-label position="floating" color="primary">Title</ion-label>
+      <ion-label position="floating" color="dark-tint">Title</ion-label>
       <ion-input type="text" formControlName="title"></ion-input>
     </ion-item>
     <ion-item>
