--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,8 +12,9 @@
     
      <div>
         <ion-row no-padding>
-          <ion-col size="6" offset="3">
-            <img [src]="image" alt="" *ngIf="image" />
+          <ion-col size="11" offset="2">
+             
+         <img [src]="image" alt="" *ngIf="image" /> -->
           </ion-col>
         </ion-row>
       <!--   <ion-row no-padding>
@@ -25,29 +26,36 @@
           </ion-col>
         </ion-row> -->
       </div>
-     
-      <ion-button size="large" color="dark" (click)="openImagePicker()" offset="-50%"><ion-icon name="folder-open" style="margin-right: 10px"></ion-icon>Gallery</ion-button>
-      
-      <ion-button size="large" color="dark" (click)="takePicture()"><ion-icon name="camera" style="margin-right: 10px"></ion-icon>Camera</ion-button>
-       
+
+     <ion-grid>
+       <ion-row>
+         <ion-col offset ="0.9"size="1">
+      <ion-button class="imagebutton" size="large" color="secondary" (click)="openImagePicker()" offset="5"><ion-icon name="folder-open" style="margin-right: 10px"></ion-icon>Gallery</ion-button>
+         </ion-col>
+         <ion-col offset ="4" size="1" >
+      <ion-button size="large" color="tertiary" (click)="takePicture()"><ion-icon name="camera" style="margin-right: 10px"></ion-icon>Camera</ion-button>
+    </ion-col>
+    </ion-row>
+    </ion-grid>
   
       <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)" >
-        <ion-card color="light">
-          <ion-label position="floating" >Title</ion-label>
+        <ion-item color="dark">
+          <ion-label position="floating"></ion-label>
           <ion-input type="text" formControlName="title"></ion-input>
-        </ion-card>
-        <ion-item>
-          <ion-label position="floating" color="light">Description</ion-label>
+        </ion-item>
+        <ion-item color="dark">
+          <ion-label position="floating">Description</ion-label>
           <ion-input type="text" formControlName="description"  color="light"></ion-input>
         </ion-item>
-        <ion-item>
-          <ion-label color="light">Category</ion-label>
-          <ion-select color="light" placeholder="Select One" formControlName="category">
-            <ion-select-option color="light" value="Wipped">Wipped</ion-select-option>
-            <ion-select-option  color="light"value="Wipping">Wipping</ion-select-option>
+        <ion-item color="dark">
+          <ion-label color="dark">Category</ion-label>
+          <ion-select color="dark" placeholder="Category" formControlName="category">
+            <ion-select-option color="dark" value="Wipped">Wipped</ion-select-option>
+            <ion-select-option  color="dark"value="Wipping">Wipping</ion-select-option>
           </ion-select>
         </ion-item>
         <ion-button class="submit-btn" expand="block" type="submit" color="medium-tint" [disabled]="!validations_form.valid">Create</ion-button>
       </form> 
+
    
 </ion-content>
