--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -14,3 +14,8 @@
     --ion-tabbar-background-color:rgb(12, 12, 12);
     --ion-tabs-background-color:var(--ion-tabbar-background-color, #ffffff);
     }
+
+    #imagebutton {
+      margin-left: 300px !important;
+      height: 400px;
+    }
