--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding color="medium">
   <div>
     <ion-row>
       <ion-col size="12" offset="0">
@@ -16,21 +16,21 @@
     </ion-row>
     <ion-row>
       <ion-col size="6" offset="3">
-        <ion-button fill="outline" expand="block" size="small" (click)="openImagePicker()">Change Picture</ion-button>
+        <ion-button color="light" fill="outline" expand="block" size="small" (click)="openImagePicker()">Change Picture</ion-button>
       </ion-col>
     </ion-row>
   </div>
   <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)">
     <ion-item>
-      <ion-label position="floating" color="dark-tint">Title</ion-label>
+      <ion-label position="floating" >Title</ion-label>
       <ion-input type="text" formControlName="title"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating" color="primary">Description</ion-label>
+      <ion-label position="floating">Description</ion-label>
       <ion-input type="text" formControlName="description"></ion-input>
     </ion-item>
-    <ion-button class="submit-button" expand="block" type="submit" [disabled]="!validations_form.valid">Save</ion-button>
+    <ion-button class="submit-button" expand="full" fill="outline" color="light" type="submit" [disabled]="!validations_form.valid">Save</ion-button>
   </form>
-  <ion-button class="delete-button" expand="block" color="danger" (click)="delete()">Delete</ion-button>
+  <ion-button class="delete-button" expand="full"  fill="outline"color="light" (click)="delete()">Delete</ion-button>
 
 </ion-content>
