--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,22 +1,17 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title>
       WIPPED
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-  <ion-content padding>
-  <p>This page works</p>
+  <ion-content class="card-background-page" color="medium">
 	<div *ngIf="posts">
     <ion-card *ngFor ="let post of posts">
       <img [src]="post.image">
-      <ion-card-content>
-        <p>{{ post.title}}</p>
-      </ion-card-content>
-      <ion-item (click)="toggleHeart()">
-        <ion-icon [name]="heartType"></ion-icon>
-      </ion-item>
+        <div class="card-title">{{ post.title}}</div>
     </ion-card>
      </div>    
 </ion-content> 
+
