--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
     
      <div>
         <ion-row no-padding>
-          <ion-col size="11" offset="2">
+          <ion-col size="11" >
              
          <img [src]="image" alt="" *ngIf="image" /> -->
           </ion-col>
@@ -40,7 +40,7 @@
   
       <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)" >
         <ion-item color="dark">
-          <ion-label position="floating"></ion-label>
+          <ion-label position="floating">Title</ion-label>
           <ion-input type="text" formControlName="title"></ion-input>
         </ion-item>
         <ion-item color="dark">
