--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -29,6 +29,13 @@
       <ion-label position="floating">Description</ion-label>
       <ion-input type="text" formControlName="description"></ion-input>
     </ion-item>
+    <ion-item color="dark">
+        <ion-label color="dark">Category</ion-label>
+        <ion-select color="dark" placeholder="Category" formControlName="category">
+          <ion-select-option color="dark" value="Wipped">Wipped</ion-select-option>
+          <ion-select-option  color="dark"value="Wipping">Wipping</ion-select-option>
+        </ion-select>
+      </ion-item>
     <ion-button class="submit-button" expand="full" fill="outline" color="light" type="submit" [disabled]="!validations_form.valid">Save</ion-button>
   </form>
   <ion-button class="delete-button" expand="full"  fill="outline"color="light" (click)="delete()">Delete</ion-button>
