--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
     
      <div>
         <ion-row no-padding>
-          <ion-col size="11" >
+          <ion-col size="11" offset="0.5">
              
          <img [src]="image" alt="" *ngIf="image" /> -->
           </ion-col>
