--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,13 @@
         <div class="card-title">{{ post.title}}</div>
     </ion-card>
      </div>    
+
+     <ion-infinite-scroll threshold="100px" (ionInfinite)="tabTwoFeed($event)">
+      <ion-infinite-scroll-content
+        loadingSpinner="bubbles"
+        loadingText="Loading more data...">
+      </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
 </ion-content> 
 
