--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,19 +7,18 @@
 </ion-header>
 
   <ion-content class="card-background-page" color="medium">
-	<div *ngIf="posts">
-    <ion-card *ngFor ="let post of posts">
-      <img [src]="post.image">
-        <div class="card-title">{{ post.title}}</div>
-    </ion-card>
-     </div>    
-
-     <ion-infinite-scroll threshold="100px" (ionInfinite)="tabTwoFeed($event)">
-      <ion-infinite-scroll-content
-        loadingSpinner="bubbles"
-        loadingText="Loading more data...">
-      </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
-
+    <div class="ion-padding">
+    <ion-refresher  slot = "fixed" (ionRefresh)="tabTwoFeed($event)">
+      <ion-refresher-content pullingIcon="arrow-dropdown" 
+       refreshingSpinner="circles" refreshingText="refreshing..">
+          <div *ngIf="posts">
+              <ion-card *ngFor ="let post of posts">
+                <img [src]="post.image">
+                  <div class="card-title">{{ post.title}}</div>
+              </ion-card>
+               </div>  
+      </ion-refresher-content>
+      </ion-refresher>
+    </div>  
 </ion-content> 
 
