--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,17 +8,17 @@
 
   <ion-content class="card-background-page" color="medium">
     <div class="ion-padding">
-    <ion-refresher  slot = "fixed" (ionRefresh)="tabTwoFeed($event)">
+    <ion-refresher  (ionRefresh)="tabTwoFeed($event)">
       <ion-refresher-content pullingIcon="arrow-dropdown" 
        refreshingSpinner="circles" refreshingText="refreshing..">
-          <div *ngIf="posts">
-              <ion-card *ngFor ="let post of posts">
-                <img [src]="post.image">
-                  <div class="card-title">{{ post.title}}</div>
-              </ion-card>
-               </div>  
       </ion-refresher-content>
       </ion-refresher>
     </div>  
+    <div *ngIf="posts">
+        <ion-card *ngFor ="let post of posts">
+          <img [src]="post.image">
+            <div class="card-title">{{ post.title}}</div>
+        </ion-card>
+         </div>  
 </ion-content> 
 
