image lenght array

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,9 +7,9 @@ photo add
 </ion-header>
 
 <ion-content>
-  <ion-button *ngIf="image" class="imagebutton" size="large" shape="round" color="secondary" (click)="openImagePicker()" ><ion-icon name="folder-open" style="margin-right: 10px"></ion-icon></ion-button>
+  <ion-button *ngIf="image.length == 0" class="imagebutton" size="large" shape="round" color="secondary" (click)="openImagePicker()" ><ion-icon name="folder-open" style="margin-right: 10px"></ion-icon></ion-button>
     
-  <ion-button   *ngIf="image" size="large" color="tertiary" shape="round"  (click)="takePicture()"><ion-icon name="camera" ></ion-icon></ion-button>
+  <ion-button  *ngIf="image.length == 0" size="large" color="tertiary" shape="round"  (click)="takePicture()"><ion-icon name="camera" ></ion-icon></ion-button>
 
   
     
@@ -33,7 +33,7 @@ photo add
     
     
   
-      <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)" *ngIf="!image">
+      <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)" *ngIf="image.length > 0" >
         <ion-item color="dark">
           <ion-label position="floating">Title</ion-label>
           <ion-input type="text" formControlName="title"></ion-input>
