--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -9,6 +9,7 @@
       --ion-background-color:#111D12;
   } 
 
+
   ion-tabs{
 
     --ion-tabbar-background-color:rgb(12, 12, 12);
@@ -29,11 +30,39 @@
     }
     
     @keyframes button {
-      0%   {left:0%; top:100%;}
+      0%   {left:0%; top:100% }
       100% { left:30%; top:60%;}
     }
 
-    ion-slides {
-     z-index: -30;
-     position: absolute;
+    ion-slides  {
+     background-color:yellow;
+     position: absolute; 
+     width:400px !important;
+     height: 300px !important;
+     height: auto !important;
+     float: left !important;
+     margin: 3px !important;
+     padding: 3px !important;
+   
     }
+
+
+  img {
+    max-width: 100% !important;
+    max-height: 100% !important;
+    height: auto !important;
+}
+
+    //image fixed size
+    #form {
+      background-color: white;
+      position: absolute; 
+      margin-top: 400px;
+      margin-left: auto;
+      width: 100%;
+      height: 300px;
+      
+    }
+
+   
+
