--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -24,21 +24,19 @@
     ion-button {
       position: relative;
       animation-name: button;
-      animation-duration: 1s;
+      animation-duration: 0.7s;
       animation-fill-mode: forwards;
       z-index: 100;
     }
     
     @keyframes button {
       0%   {left:0%; top:100% }
-      100% { left:30%; top:60%;}
+      100% { left:25%; top:60%;}
     }
 
     ion-slides  {
-     background-color:yellow;
      position: absolute; 
-     width:400px !important;
-     height: 300px !important;
+     width:370px !important; //@media change to different width
      height: auto !important;
      float: left !important;
      margin: 3px !important;
@@ -46,18 +44,21 @@
    
     }
 
+    ion-slide {
+      height:300px;  
+    }
 
   img {
-    max-width: 100% !important;
-    max-height: 100% !important;
+    width: 100% !important;
+    height: 100% !important;
     height: auto !important;
+    object-fit: cover ;
 }
 
     //image fixed size
     #form {
-      background-color: white;
       position: absolute; 
-      margin-top: 400px;
+      margin-top: 320px;
       margin-left: auto;
       width: 100%;
       height: 300px;
