--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,19 +1,18 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title>
-photo add 
+Post
     </ion-title>
    <!-- *ngIf="image.length == 0"  -->
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+<!-- 
   <ion-button  *ngIf="image.length == 0" class="imagebutton" size="large" shape="round" color="secondary" (click)="openImagePicker()" ><ion-icon name="folder-open" ></ion-icon></ion-button>
-
-
-  <ion-button  *ngIf="image.length == 0" size="large" color="tertiary" shape="round"  (click)="takePicture()"><ion-icon name="Camera" ></ion-icon></ion-button>
-   
+  <ion-button  *ngIf="image.length == 0" size="large" color="tertiary" shape="round"  (click)="takePicture()"><ion-icon name="Camera" ></ion-icon></ion-button> -->
+  <ion-button *ngIf ="!category" (click)="newProject()">New Project</ion-button>
+  <ion-button *ngIf ="!category" (click)="completeProject()">Complete Project</ion-button>
   <ion-slides [options] = "sliderOpts">
     <ion-slide *ngFor="let image of image">
            <!-- <ion-slide *ngFor="let img of [1,2,3]">  -->
